error.txt
(index):64 cdn.tailwindcss.com should not be used in production. To use Tailwind CSS in production, install it as a PostCSS plugin or use the Tailwind CLI: https://tailwindcss.com/docs/installation
(anonymous) @ (index):64
transformScriptTags.ts:271 You are using the in-browser Babel transformer. Be sure to precompile your scripts for production - https://babeljs.io/docs/setup/
(anonymous) @ transformScriptTags.ts:271
babel.min.js:3 Uncaught SyntaxError: /Inline Babel script: Expected corresponding JSX closing tag for <header>. (635:6)

  633 |         </div>
  634 |         </div>
> 635 |       </div>
      |       ^
  636 |     </header>
  637 |   );
  638 | }
index.html:1 Unsafe attempt to load URL file:///Users/fabiopastore/Desktop/App/FinancialApp/index.html from frame with URL file:///Users/fabiopastore/Desktop/App/FinancialApp/index.html. 'file:' URLs are treated as unique security origins.

